Non-PCH build for arm32 fails

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b11
    • arm

      arm32-hflt:

      * For target hotspot_variant-server_libjvm_objs_methodHandles_arm.o:
      /home/shade/jdk-jdk/src/hotspot/cpu/arm/methodHandles_arm.cpp: In function 'void trace_method_handle_stub(const char*, intptr_t*, intptr_t*, oop)':
      /home/shade/jdk-jdk/src/hotspot/cpu/arm/methodHandles_arm.cpp:543:5: error: 'PRESERVE_EXCEPTION_MARK' was not declared in this scope
           PRESERVE_EXCEPTION_MARK;
           ^~~~~~~~~~~~~~~~~~~~~~~

      * For target hotspot_variant-server_libjvm_gtest_objs_BUILD_GTEST_LIBJVM_link:
      /home/shade/jdk-jdk/build/linux-arm-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/relocInfo_arm.o: In function `RawNativeJump::set_jump_destination(unsigned char*)':
      /home/shade/jdk-jdk/src/hotspot/cpu/arm/nativeInst_arm_32.hpp:271: undefined reference to `OrderAccess::storeload()'
      collect2: error: ld returned 1 exit status
      * For target hotspot_variant-server_libjvm_objs_BUILD_LIBJVM_link:
      /home/shade/jdk-jdk/build/linux-arm-normal-server-fastdebug/hotspot/variant-server/libjvm/objs/relocInfo_arm.o: In function `RawNativeJump::set_jump_destination(unsigned char*)':
      /home/shade/jdk-jdk/src/hotspot/cpu/arm/nativeInst_arm_32.hpp:271: undefined reference to `OrderAccess::storeload()'
      collect2: error: ld returned 1 exit status

            Assignee:
            Aleksey Shipilev
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: