8202134: Non-PCH build for arm32 fails

Reviewed-by: stefank